WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186005
Captions are sized incorrectly in PiP mode
https://bugs.webkit.org/show_bug.cgi?id=186005
Summary
Captions are sized incorrectly in PiP mode
Eric Carlson
Reported
2018-05-25 16:36:13 PDT
Regression caused by
r229824
.
Attachments
Patch
(3.26 KB, patch)
2018-05-25 16:46 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2018-05-25 16:36:41 PDT
<
rdar://problem/39729718
>
Eric Carlson
Comment 2
2018-05-25 16:46:20 PDT
Created
attachment 341355
[details]
Patch
WebKit Commit Bot
Comment 3
2018-05-25 18:02:50 PDT
Comment on
attachment 341355
[details]
Patch Clearing flags on attachment: 341355 Committed
r232220
: <
https://trac.webkit.org/changeset/232220
>
WebKit Commit Bot
Comment 4
2018-05-25 18:02:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug