Captions are sized incorrectly in PiP mode https://bugs.webkit.org/show_bug.cgi?id=186005 <rdar://problem/39729718>

Reviewed by Dean Jackson.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateSizes): Only sync text track bounds
when the size actually changes.

* platform/graphics/avfoundation/objc/VideoFullscreenLayerManagerObjC.mm:
(WebCore::VideoFullscreenLayerManagerObjC::setVideoFullscreenFrame): Call syncTextTrackBounds.
(WebCore::VideoFullscreenLayerManagerObjC::syncTextTrackBounds): Set the text track layer size
to m_videoFullscreenFrame, it is always set the size of the PiP/Fullscreen layer.


Canonical link: https://commits.webkit.org/201445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232220 268f45cc-cd09-0410-ab3c-d52691b4dbfc